Alignment issue

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -364,7 +364,6 @@ th:first-of-type, td:first-of-type { border-left: 0; }
 .sitenav ul .sitenav__icon {
   height: 28px;
   width: 28px;
-  margin: 7px auto;
   display: block;
 }
 .sitenav ul .sitenav__label {
